[package]
name = "gh-worker"
version = "0.1.1"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
anyhow = "1.0.103"
sheen = "0.3"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15.7"
chrono = "0.4"
